<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login Strings -->
    <string name="username">Enter Username/Email Address</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create an Account</string>

    <!-- Profile Information -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>

    <!-- Names of Activities -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_welcome">Welcome Page</string>
    <string name="action_safetyzones">Safety Zones</string>
    <string name="action_contacts">Contacts</string>
    <string name="edit_default_settings">Edit Default Settings</string>
    <string name="title_activity_app_blocking">Block Apps and Phone Numbers</string>
    <string name="title_activity_quick_text">Quick Text</string>
    <string name="title_activity_block_contacts">Block Contacts</string>
    <string name="title_activity_edit_default_settings">Edit Default Settings</string>
    <string name="title_activity_edit_blocked_contacts_list">Edit Blocked Contacts List</string>
    <string name="title_activity_start_night_out">Start Night Out</string>
    <string name="title_activity_night_out_safety_zones">Night Out Safety Zones</string>
    <string name="title_activity_night_out_quick_texts">Night Out Quick Texts</string>
    <string name="title_activity_night_out_edit_blocked_contacts_list">Night Out Edit Blocked Contacts List</string>
    <string name="title_activity_night_out_block_contacts">Night Out Block Contacts</string>
    <string name="title_activity_main_map">Main Map</string>
    <string name="title_activity_send_quick_text">Send Quick Text to Night Out Group</string>
    <string name="title_activity_night_out_app_number_blocking">Night Out App Number Blocking</string>
    <string name="title_activity_night_out_group">Night Out Group</string>

    <!-- Safety Zone Information -->
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="safety_zone_name">Safety Zone Name</string>
    <string name="update_safety_zone">Update Safety Zone</string>
    <string name="no_safety_zone_description">You currently do not have any Safety Zones.
      \n \nAdd locations you consider to be safe where you will end your night. Your group will automatically be notified once you make it to one of your safety zones!</string>
    <string name="edit_contact">Edit Contact</string>

    <!-- Quick Text Information -->
    <string name="quickTextMessage">Enter Message</string>
    <string name="no_quick_text_description">You currently have no Quick Texts. Add messages you want to be able to quickly send to your group when you go out.</string>
    <string name="quickTextInstructions">These are your current quick text messages. Edit, add, or delete any quick text messages you want. You can send quick text messages
        to your group without having to type them each time!</string>

    <!-- App/Number Blocking Information -->
    <string name="appNumberBlock">Add apps and contacts you want to block during your night out!</string>
    <string name="no_blocked_contacts_description">You currently have no blocked contacts.</string>

    <!-- Contact / Friends Information -->
    <string name="contact_group_description">Create a group with friends you commonly go out with to make adding inviting friends to a Night Out faster! </string>
    <string name="contact_group_message_when_contacts_empty">You currently do not have any So-So friends. Add contacts or wait for your friends to accept your invite!</string>

    <!-- General Button Texts -->
    <string name="add_button_text">Add</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="title_activity_add_friends">AddFriends</string>
    <string name="start_night_out">Start Night Out</string>
    <string name="save_changes">Save changes</string>

    <!-- Welcome Screen -->
    <string name="welcome">Welcome</string>
    <string name="welcome_message">To get started, lets set up your Default Settings! </string>

    <!-- Start Night Out -->
    <string name="confirm_default_settings">Confirm</string>

    <!-- Misc -->
    <string name="logout_full">Log out of So-So</string>
    <string name="post">Post</string>
    <string name="slogan">Slogan</string>
    <string name="parse">So-So</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_name">So-So</string>
    <string name="logo_desc">So-So Logo</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="action_group">Groups</string>
    <string name="update_quick_text">Update Quick Text</string>


</resources>
