<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logososo"
        android:contentDescription="So-So Logo"
        android:layout_alignStart="@+id/edit_default_settings"
        android:layout_alignEnd="@+id/edit_default_settings"
        android:layout_alignBottom="@id/edit_default_settings"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/edit_default_settings"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_default_settings"
        android:id="@+id/edit_default_settings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_night_out"
        android:id="@+id/start_night_out"
        android:layout_alignTop="@+id/edit_default_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        />

   <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to Map"
        android:id="@+id/map"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/welcome"
        android:layout_alignEnd="@+id/welcome"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" /> -->


</RelativeLayout>
